@@ -1,5 +1,10 @@
 2012-03-12  David S. Miller  <davem@davemloft.net>
 
+	* sysdeps/generic/dl-osinfo.h (_dl_setup_stack_chk_guard): Fix
+	masking out of the most significant byte of random value used.
+	* sysdeps/unix/sysv/linux/dl-osinfo.h (_dl_setup_stack_chk_guard):
+	Fix coding style in previous change.
+
 	* sysdeps/unix/sysv/linux/kernel-features.h
 	(__ASSUME_CLONE_THREAD_FLAGS): Set on sparc when 2.5.64 and later.
 	(__ASSUME_TGKILL): Set on sparc when 2.6.1 and later, simplify
